[package]
name = "cairo-rest-server"
version = "0.1.0"

[dependencies]
compiler = { git = "https://github.com/starkware-libs/cairo" }
casm = { git = "https://github.com/starkware-libs/cairo" }
sierra = { git = "https://github.com/starkware-libs/cairo" }
sierra_gas = { git = "https://github.com/starkware-libs/cairo" }
sierra_generator = { git = "https://github.com/starkware-libs/cairo" }
sierra_to_casm = { git = "https://github.com/starkware-libs/cairo" }
actix-web = "4"
actix-files = "*"
anyhow = "1.0.66"
cairo-rs = { git = "https://github.com/lambdaclass/cairo-rs", rev="3a2dead" }
clap = { version = "4.0", features = ["derive"] }
itertools = "0.10.3"
salsa = "0.16.1"
thiserror = "1.0.32"
tokio = { version = "1.18.2", features = ["full", "sync"] }

[[bin]]
name = "cairo-rest-server"
path = "src/serve.rs"
